2013-11-30  Jan Djärv  <jan.h.d@swipnet.se>

	* xdisp.c (redisplay_internal): Call request_sigio at end_of_redisplay
	if interrupts are deferred (Bug#15801).

2013-11-30  Martin Rudalics  <rudalics@gmx.at>

	Support resizing frames and windows pixelwise.
	* dispextern.h (enum window_part): Add ON_SCROLL_BAR,
	ON_RIGHT_DIVIDER and ON_BOTTOM_DIVIDER.
	(struct glyph_matrix): Replace window_left_col and
	window_top_line by window_pixel_left and window_pixel_top.
	(WINDOW_WANTS_MODELINE_P, WINDOW_WANTS_HEADER_LINE_P): Minor
	rewrite.
	(enum face_id): Add WINDOW_DIVIDER_FACE_ID.
	(draw_window_divider, move_it_to, x_draw_right_divider)
	(x_draw_bottom_divider, change_frame_size): Add or fix
	declarations.
	* dispnew.c (change_frame_size_1): Change prototype.
	(adjust_glyph_matrix, required_matrix_width)
	(adjust_frame_glyphs_for_window_redisplay): Use pixel
	values instead of lines and columns.
	(marginal_area_string): Use WINDOW_FRINGES_WIDTH instead of
	WINDOW_TOTAL_FRINGE_WIDTH.
	(handle_window_change_signal, do_pending_window_change)
	(init_display): Adjusts calls of change_frame_size.
	(change_frame_size, change_frame_size_1): Handle pixelwise
	changes.
	* frame.c (Qright_divider_width, Qbottom_divider_width): New
	Lisp objects.
	(set_menu_bar_lines_1, set_menu_bar_lines, make_frame)
	(make_terminal_frame, Fmake_terminal_frame, Fframe_parameters)
	(x_set_internal_border_width, x_set_vertical_scroll_bars)
	(x_set_scroll_bar_width, x_figure_window_size): Handle pixel
	values.
	(set_frame_param): New function.
	(Fframe_text_cols, Fframe_text_lines, Fframe_total_cols)
	(Fframe_text_width, Fframe_text_height, Fscroll_bar_width)
	(Ffringe_width, Fborder_width, Fright_divider_width)
	(Fbottom_divider_width): New functions, defsubr them.
	(Fset_frame_height, Fset_frame_width, Fset_frame_size): New
	argument pixelwise.
	(struct frame_parm_table): New members Qright_divider_width and
	Qbottom_divider_width.
	(x_set_frame_parameters): Handle parameters for pixelwise sizes.